--- a/css/game.css
+++ b/css/game.css
@@ -1,34 +1,53 @@
 h1{
 	color: white;
+	font-size: 50px;
+	margin-left: 500px;
 }
 
 body{
 
 	background-color: black;
-	max-width: 500px;
+	max-width: 600px;
 
 }
 
  #box1 {
 
 	position: relative;
-	background-color: white;
-	width: 5%;
-	height: 10px;
+	background-color: black;
 	padding: 30px;
+	width: 300px;
+	height: 400px;
 	border: 1px;
-	margin-top: 60px;
 	margin-left: 10px;
+	margin-top: -30px;
 }
 
  #box2 {
 	position: relative;
-	background-color: white;
-	width: 5%;
-	height: 10px;
+	background-color: black;
 	padding: 30px;
+	width: 200px;
+	height: 300px;
 	border: 1px;
-	top: 50px;
-	margin-left: 10px;
+	margin-left: 50px;
+	margin-top: -90px;
 }
+
+
+#box1 img {
+
+	width: 300px;
+	height: 380px;
+
+}
+
+#box2 img{
+
+	width: 200px;
+	height: 280px;
+	margin-left: 10px;
+
+}
+
 
